<project>
  <groupId>com.vmware</groupId>
  <artifactId>workflow</artifactId>
  <packaging>pom</packaging>
  <modelVersion>4.0.0</modelVersion>
  <version>1.0</version>
  <modules>
    <module>core</module>
    <module>serviceApis</module>
    <module>config</module>
    <module>utils</module>
  </modules>

  <build>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.3</version>
              <configuration>
                  <source>1.8</source>
                  <target>1.8</target>
              </configuration>
          </plugin>
      </plugins>
  </build>
</project>